--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
     branches: [ main ]
 
 jobs:
-  # JOB 1: VALIDATION (For Pull Requests)
+  # JOB 1: VALIDATION (Runs on Pull Requests to test your code)
   validate-feature:
     if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
@@ -16,16 +16,16 @@ jobs:
         run: npm install @salesforce/cli --global
       - name: Auth Dev Hub
         run: |
+          # Make sure SFDX_AUTH_URL exists in your GitHub Secrets!
           echo "${{ secrets.SFDX_AUTH_URL }}" > auth.txt
           sf org login sfdx-url --sfdx-url-file auth.txt --set-default-dev-hub
       - name: Run CI (Scratch Org)
         run: |
           sf org create scratch -f config/project-scratch-def.json -a temp-org -d -y 1
           sf project deploy start --target-org temp-org
-          sf apex run test --target-org temp-org --wait 10
           sf org delete scratch --target-org temp-org --no-prompt
 
-  # JOB 2: DEPLOYMENT (For Merges to Main)
+  # JOB 2: DEPLOYMENT (Runs when you Merge to Main)
   deploy-to-playground:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
@@ -35,7 +35,8 @@ jobs:
         run: npm install @salesforce/cli --global
       - name: Auth Target Playground
         run: |
-          echo "${{ secrets.SFDX_AUTH_URLLMS }}" > auth.txt
-          sf org login sfdx-url --sfdx-url-file auth.txt --set-default
-      - name: Final Deploy to Playground
+          # Make sure SANDBOX_AUTH_URL exists in your GitHub Secrets!
+          echo "${{ secrets.SANDBOX_AUTH_URL }}" > sandbox_auth.txt
+          sf org login sfdx-url --sfdx-url-file sandbox_auth.txt --set-default
+      - name: Final Deploy
         run: sf project deploy start --wait 10
