--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Auth Target Playground
         run: |
           # Make sure SANDBOX_AUTH_URL exists in your GitHub Secrets!
-          echo "${{ secrets.SANDBOX_AUTH_URL }}" > sandbox_auth.txt
+          echo "${{ secrets.SFDX_AUTH_URLLMS }}" > sandbox_auth.txt
           sf org login sfdx-url --sfdx-url-file sandbox_auth.txt --set-default
       - name: Final Deploy
         run: sf project deploy start --wait 10
